# otus-clickhouse-project

./: .gitignore  Dockerfile.clickhouse  Dockerfile.netflow_producer  README.md  docker-compose.yml  hld_diagram.drawio  pipeline.sql
configs/: clickhouse-backup.yml  macros_ch1.xml  macros_ch2.xml  macros_ch3.xml  macros_ch4.xml  prometheus.yml  z_config.xml
netflow_producer/: .gitignore  README.md  csv_reader.ipynb  main.py  pyproject.toml
netflow_producer/logs/: time_pointer.txt
nifi/templates/: NetFlow2ClickHouse.json
sql/: init_pipeline.sql  sample-stream.sql  telecomX.sql
